[workspace]
members = [
    "ports/glutin",
    "ports/libsimpleservo/capi/",
    "ports/libsimpleservo/jniapi/",
    "ports/libmlservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

# Those are here to dedupe winapi since mio is still using winapi 0.2.
mio = { git = "https://github.com/servo/mio.git", branch = "servo" }
iovec = { git = "https://github.com/servo/iovec.git", branch = "servo" }
cmake = { git = "https://github.com/alexcrichton/cmake-rs" }

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/gatoWololo/webrender", branch = "rr-changes" }
webrender_api = { git = "https://github.com/gatoWololo/webrender", branch = "rr-changes" }

[patch."https://github.com/servo/media"]
servo-media = {git = "https://github.com/gatoWololo/servo-media", branch = "rr_channels"}
servo-media-gstreamer = { git = "https://github.com/gatoWololo/servo-media", branch = "rr_channels"}
servo-media-dummy = { git = "https://github.com/gatoWololo/servo-media", branch = "rr_channels"}