[workspace]
members = [
    "ports/winit",
    "ports/gstplugin",
    "ports/libsimpleservo/capi/",
    "ports/libsimpleservo/jniapi/",
    "ports/libmlservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
debug = true
# lto = false

# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

[patch.crates-io]
#tokio = {path = "../tokio-0.1.22/"}
tokio = { git = "https://github.com/gatoWololo/tokio-0.1.22"}

[patch."https://github.com/servo/webxr"]
webxr-api = { git = "https://github.com/gatoWololo/webxr/"}

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/gatoWololo/webrender" }
webrender_api = { git = "https://github.com/gatoWololo/webrender" }
#webrender = { path = "../webrender/webrender/" }
#webrender_api = { path = "../webrender/webrender_api/" }

[patch."https://github.com/gatowololo/rr_channel"]
rr_channel = {path = "../rr_channel"}
# Notice extra '/' on git https address. This is needed as Cargo does not currently allow pointing
# to a different branch if the address is the same.
#rr_channel = { git = "https:///github.com//gatoWololo/rr_channel", branch = "servo_development"}

[patch."https://github.com/servo/media"]
servo-media = {git = "https://github.com/gatoWololo/servo-media"}
servo-media-gstreamer = { git = "https://github.com/gatoWololo/servo-media"}
servo-media-dummy = { git = "https://github.com/gatoWololo/servo-media"}
#servo-media = {path = "../media/servo-media"}
#servo-media-gstreamer = {path = "../media/backends/gstreamer"}
#servo-media-dummy = { path = "../media/backends/dummy"}


# This is here to dedupe winapi since mio 0.6 is still using winapi 0.2.
mio = { git = "https://github.com/servo/mio.git", branch = "servo-mio-0.6.22" }

# https://github.com/rust-lang/backtrace-rs/pull/363/
backtrace = { git = "https://github.com/servo/backtrace-rs", branch = "uwp-fix" }

[patch."https://github.com/jrmuizel/raqote"]
raqote = { git = "https://github.com/jdm/raqote", branch = "fkup" }

# https://github.com/servo/servo/issues/27515#issuecomment-671474054
#[patch."https://github.com/servo/webrender"]
#webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
#webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
