[package]
name = "debugger"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
name = "debugger"
path = "lib.rs"
crate_type = ["rlib"]

[dependencies]
rr_channel = {git = "https://github.com/gatoWololo/rr_channel"}
log = "0.4"
ws = "0.8"
