[package]
name = "layout_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
name = "layout_traits"
path = "lib.rs"

[dependencies]
rr_channels = {path = "../rr_channels"}
euclid = "0.19"
gfx = {path = "../gfx"}
ipc-channel = {path = "../../../ipc-channel/"}
metrics = {path = "../metrics"}
msg = {path = "../msg"}
net_traits = {path = "../net_traits"}
profile_traits = {path = "../profile_traits"}
script_traits = {path = "../script_traits"}
servo_url = {path = "../url"}
servo_geometry = {path = "../geometry"}
webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
