[package]
name = "webvr"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
name = "webvr"
path = "lib.rs"

[features]
googlevr = ['rust-webvr/googlevr']
oculusvr = ['rust-webvr/oculusvr']

[dependencies]
canvas_traits = {path = "../canvas_traits"}
rr_channels = {path = "../rr_channels"}
euclid = "0.19"
gleam = "0.6"
ipc-channel = {path = "../../../ipc-channel/"}
log = "0.4"
msg = {path = "../msg"}
rust-webvr = {version = "0.11.4", features = ["mock", "openvr", "vrexternal"]}
rust-webvr-api = "0.11.4"
script_traits = {path = "../script_traits"}
servo_config = {path = "../config"}
webvr_traits = {path = "../webvr_traits" }
